feat: update favicon and add SVG logo for Algeria OpenGov

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Ccircle cx='50' cy='50' r='50' fill='%23007A3D'/%3E%3Ctext x='50' y='58' font-size='50' text-anchor='middle' fill='%23fff' font-family='Arial'%3EA%3C/text%3E%3C/svg%3E">
+    <link rel="icon" href="assets/logo.svg" type="image/svg+xml">
     <style>
         :root {
             --primary-green: #007A3D;
@@ -93,10 +93,8 @@
     <nav class="bg-white shadow-md sticky top-0 z-50">
         <div class="container mx-auto px-4">
             <div class="flex justify-between items-center py-4">
-                <div class="flex items-center space-x-2">
-                    <div class="w-10 h-10 bg-green-700 rounded-full flex items-center justify-center">
-                        <span class="text-white font-bold text-lg">A</span>
-                    </div>
+                <div class="flex items-center space-x-3">
+                    <img src="assets/logo.svg" alt="Algeria OpenGov logo" class="w-10 h-10" />
                     <span class="text-xl font-bold text-green-700">Algeria OpenGov</span>
                 </div>
                 
@@ -458,9 +456,7 @@
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <div class="mb-4 md:mb-0">
                     <div class="flex items-center space-x-2">
-                        <div class="w-8 h-8 bg-white rounded-full flex items-center justify-center">
-                            <span class="text-green-800 font-bold text-sm">A</span>
-                        </div>
+                        <img src="assets/logo.svg" alt="Algeria OpenGov logo" class="w-8 h-8 bg-white rounded-full p-1" />
                         <span class="text-xl font-bold">Algeria OpenGov</span>
                     </div>
                     <p class="text-green-100 mt-2">A Transparent Government Model</p>
